--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@
         - 1883:1883
         - 9001:9001
       volumes:
-        - ~/.mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf
+        - ~/.mosquitto/config/:/mosquitto/config/
         - ~/.mosquitto/data/:/mosquitto/data/
         - ~/.mosquitto/log/:/mosquitto/log/
         - ~/.mosquitto/pwd/:/mosquitto/pwd/
