add mosquittoinstalldocker submodule

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MOSQUITTO_USERNAME=mosquitto
-MOSQUITTO_PASSWORD=mosquitto
+MOSQUITTO_INSTALL_WORK_DIR=./MosquittoDockerComposeInstall
+CACERT_FILE=/etc/ssl/certs/ca-certificates.crt
