--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MosquittoDockerComposeInstall"]
 	path = MosquittoDockerComposeInstall
 	url = https://github.com/tonyldo/MosquittoDockerComposeInstall.git
+[submodule "wait-for-it"]
+	path = wait-for-it
+	url = https://github.com/vishnubob/wait-for-it.git
