--- a/docker-compose-w-mqtt.yml
+++ b/docker-compose-w-mqtt.yml
@@ -1,5 +1,8 @@
   version: '3'
   services:
     homeassistant:
+      volumes:
+        - ./wait-for-it/wait-for-it.sh:/wait-for-it.sh
       depends_on:
         - mosquitto
+      command: ["/wait-for-it.sh", "localhost:1883", "--","sh", "/docker-entrypoint.sh"]
